2008-01-23  Axel Roebel  <Axel.Roebel@ircam.fr>
Version 1.4.1

	* matlab/Fsdif_read_handler.cpp, matlab/fieldnames.hpp : 
	Add selection mechanism for all fields present in the directory
	struct.	Add range selection for time and streamid.
	
2008-01-22  Axel Roebel  <roebel@sam.localdomain>
Version 1.4.0

	* easdif/sdifnamevaluetable.hpp :
	Changed default streamid for NVT tables to be the one defined
	in the SDIF library.

	* easdif/sdifmatrixdatainterface.hpp, easdif/sdifmatrixdata.hpp :
	Completed support for all sdif integer types.

	* matlab/CMakeLists.txt, matlab/FSdifexist.m, matlab/Fsdif_read_handler.cpp,
	* matlab/Fsdif_read_handler.m, matlab/Fsdif_write_handler.cpp, matlab/Fsdif_write_handler.m, 
	* matlab/Fsdifclose.m, matlab/Fsdifexist.m, matlab/Fsdifloadfile.m, matlab/Fsdifopen.m, 
	* matlab/Fsdifread.m, matlab/Fsdifwrite.m, matlab/fieldnames.hpp :
	Added matlab mex functions to Easdif.

2008-01-12  Axel Roebel  <roebel@sam.localdomain>
Version 1.3.5

	* easdif/sdifentity.hpp : 
	Added '{' and '}' as forbidden characters when creating comments
	for Matrix- and FrameType.
	
2008-01-11  Axel Roebel  <Axel.Roebel@ircam.fr>
Version 1.3.4

	* easdif/sdifentity.cpp, easdif/sdifentity.hpp, easdif/sdifexception.hpp :
	Added new class MatrixType, FrameType, and the realted function for
	adding types to entity or retrieving types from an entity in terms of these
	clases.

2007-11-27  Axel Roebel  <Axel.Roebel@ircam.fr>
Version 1.3.3

	* easdif/sdifentity.hpp, easdif/sdifentity.cpp :
	Replaced sdif macro by inline member function.

2007-11-26  U-REC-1320-ROEBEL\Axel Roebel  <Axel.Roebel@ircam.fr>

	* easdif/sdifnamevaluetable.hpp, easdif/sdifinit.hpp, easdif/sdifexception.cpp, easdif/sdifexception.hpp,
	* easdif/sdifentity.hpp, easdif/sdifentity.cpp, easdif/sdif_matrix.hpp, easdif/sdif_frame.hpp, 
	* easdif/easdif_config.hpp.in, easdif/easdif.h : 
	Fixed to avoid compiler warnings in MSVC. 