@@ -1,3 +1,9 @@
+2008-02-14  Axel Roebel  <Axel.Roebel@ircam.fr>
+
+	* easdif/sdifentity.hpp : 
+	Renamed template parameter arguments that where likely to collide 
+	with macro names.
+	
 2008-01-23  Axel Roebel  <Axel.Roebel@ircam.fr>
 Version 1.4.1
 
@@ -1044,4 +1050,4 @@ Version 0.21
 	* ChangeLog: Added changelog to repository.
 
 
-$Id: ChangeLog,v 1.68 2008-01-23 20:24:13 roebel Exp $
+$Id: ChangeLog,v 1.69 2008-02-14 00:42:31 roebel Exp $
